# SCope

./: .babelrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Reverse_proxy.patch  Singularity  babel.config.js  compile_proto.sh  config.json  debian.json  docker-compose.host.yml  docker-compose.yml  index.html  index.js  keycloak_scope.json  main.js  package-lock.json  package.json  scope-json-metadata.schema.json  scope-json-metadata.test.json  start.sh  tpl-licenses.txt  tsconfig.json  webpack.config.js
.docker/: Dockerfile  run-scope-server.sh
.github/workflows/: continuous-integration-client.yml  continuous-integration-server.yml  security.yml
Client/: Client.js
Proto/: SCope.proto
Server/: Server.py
apache/: apache.conf.js  config.json  httpd.conf  make_scope_conf.js  scope.conf  template.conf
assets/: scope-client-0.0.1.9bfbd80.js  scope-client-0.0.3.c3d108e.js  scope-client-0.0.4.52e1aae.js  scope-client-0.0.5.944ac9c.js  scope-client-0.0.6.718c804.js
client/: babel.config.js  package-lock.json  package.json
client/config/: paths.js  webpack.common.js  webpack.dev.js  webpack.prod.js
client/src/: main.tsx  model.ts  result.test.ts  result.ts  template.html
client/src/api/: api.ts  auth.test.ts  auth.ts  err.ts  features.ts  fetch.test.ts  fetch.ts  index.ts  legacy.ts  (+2 more)
config/: paths.js  webpack.common.js  webpack.dev.js
docs/: Package_SCope.md  database.md  scope-json-metadata.schema.json
grpc-proxy-server/: README.markdown  grpc-bus.proto  package-lock.json  package.json  server.js
images/: SCope_Icon.icns
opt/: .ci.env  .env  alembic.ini  main.py  pyproject.toml  run-dev-env.sh  setup.py  test-config.json
opt/alembic/versions/: 15098932a640_inital_user_project_and_dataset_tables.py  93a79e6704cd_inital_user_and_project_tables.py  fdb90fa20f06_inital_user_project_and_dataset_tables.py
opt/scopeapi/: __init__.py  api.py  model.py
opt/scopedb/alembic/: env.py
opt/scopeserver/: __init__.py  app.py  config.py  constants.py  crud.py  database.py  gen_test_loom.py  models.py  result.py  schemas.py  server.py  server_legacy.py  settings.py
opt/scopeserver/api/: __init__.py  deps.py
opt/scopeserver/api/v1/: __init__.py  api.py  model.py  projects.py  users.py
opt/scopeserver/bindserver/: XServer.py  kubernetes-manifest.yaml  package-lock.json  package.json  server.js
opt/scopeserver/dataserver/: README.md  __init__.py  requirements.txt  tpl-licenses.txt
opt/scopeserver/dataserver/data/gene_mappings/: hsap_to_dmel_mappings.pickle  mmus_to_dmel_mappings.pickle  terminal_mappings.pickle
opt/scopeserver/dataserver/modules/gserver/: GServer.py  s_pb2.py  s_pb2.pyi  s_pb2_grpc.py
opt/scopeserver/dataserver/modules/pserver/: PServer.py
opt/scopeserver/dataserver/utils/: CellColorByFeatures.py  DataFileHandler.py  GeneSetEnrichment.py  Loom.py  LoomFileHandler.py  SearchSpace.py  SysUtils.py  annotation.py  cell_color_by_features.py  constant.py  data.py  data_file_handler.py  gene_set_enrichment.py  labels.py  loom.py  loom_file_handler.py  proto.py  search.py  search_space.py
opt/scopeserver/scope/: config.py
opt/scopeserver/utils/: CellColorByFeatures.py  DataFileHandler.py  GeneSetEnrichment.py  Loom.py  LoomFileHandler.py  SearchSpace.py
opt/test/: test_cell_color_by_features.py  test_config.py  test_data.py  test_init.py  test_loom.py  test_scopeserver.py
opt/test/data/: SCope_Test.loom  config.json  malformed_config.json
proto/: README.md
scope-client/: .babelrc  index.html  package.json  webpack.config.js
scope-client/assets/: scope-client-0.0.2.e55840c.js
scope-client/src/: main.jsx
scope-client/test/: README.md  pixi_ParticuleContainer.js  pixi_fisheye.js
scope-server/: GServer.py  README.md  Server.py  requirements.txt  setup.py
scope-server/scopeserver/: __init__.py
scope-server/test/: GClient.js  GServer-0rpc.py  GServer-grpclib.py
scope-utils/: README.md  loom_utils.R
server/: .env  .test.env  SCope.postman_collection.json  benchmark_serialisation.py  compile-proto.sh  compile_proto.sh  main.py  pyproject.toml  run-dev-env.sh  scopec.py  test-config.json
server/alembic/: env.py
server/alembic/versions/: 78e110998229_data_serialisation_test.py  7f5bfebc7bd6_implement_openid_connect_with_orcid.py  9757dac77d81_add_icon_for_identity_providers.py
server/data/: motd.txt
server/scopeserver/: __init__.py  config.py  crud.py  database.py  gen_test_loom.py  models.py  oidc.py  result.py  schemas.py
server/scopeserver/api/: deps.py
server/scopeserver/api/v1/: __init__.py  auth.py  data.py  datasets.py  legacy.py  projects.py  users.py
server/scopeserver/dataserver/: GServer.py  PServer.py  README.md
server/scopeserver/dataserver/modules/gserver/: GServer.py  s_pb2.py  s_pb2.pyi  s_pb2_grpc.py
server/scopeserver/dataserver/modules/pserver/: PServer.py
server/scopeserver/dataserver/utils/: annotation.py  cell_color_by_features.py  convert.py  data.py  data_file_handler.py  labels.py  loom.py  loom_file_handler.py  loom_like_connection.py  proto.py  search.py  search_space.py  sys_utils.py
server/test/: api_fixture.py  generate.py  test_auth_api.py  test_dataset_api.py  test_init.py~  test_labels.py  test_loom.py  test_project_api.py  test_result.py  test_user_api.py
server/test/data/: config.json  minimal.loom
shared/protobuf/: scope-grpc.proto
src/: constants.ts  main.jsx  main.tsx  result.ts  util.test.ts  util.ts
src/api/: API.ts  error.ts  features.ts  fetch.test.ts  fetch.ts  index.ts
src/components/: App.jsx  AppContent.jsx  AppHeader.jsx  AppSidebar.jsx  Main.tsx  constants.ts
src/constants/: ui.ts
src/css/: features.css  header.css  sidebar.css  viewer.css
src/features/: types.ts
src/js/: box2.js  http.js
src/proto/: README.md  s.proto
src/redux/: actionTypes.ts  actions.ts  store.ts  types.ts
src/test/: test-utils.tsx
tutorials/: SCope_AWS_Deployment.md
tutorials/aws-deployment/: README.md
tutorials/aws-deployment-quick/: README.md
tutorials/aws-deployment-source/: README.md
(+294 files in other folders)
