[tool.poetry]
name = "scopeserver"
version = "1.8.2"
description = "Visualization tool for large-scale and high dimensional single-cell data"

license = "GPL-3.0-only"

authors = [
        "Maxime De Waegeneer <mdewaegeneer@gmail.com>",
        "Kris Davie <kristofer.davie@kuleuven.vib.be>",
        "James Collier <james.collier@vib.be>",
        "Lukasz Kreft <lukasz.kreft@vib.be>"]

readme = 'README.md'

repository = "https://github.com/aertslab/SCope"
homepage = "scope.aertslab.org/"

keywords = ["single-cell",
            "gene",
            "regulatory",
            "networks",
            "grn",
            "large-scale data",
            "visualization"]

classifiers = ["Development Status :: 5 - Production/Stable",
               "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Natural Language :: English",
               "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
               "Topic :: Scientific/Engineering :: Bio-Informatics"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

grpcio = "^1.39.0"
grpcio-tools = "^1.39.0"
appdirs = "^1.4.4"
numpy = "^1.21.1"
pandas = "^1.3.1"
loompy = "^3.0.1"
fastapi = "^0.68"
hypercorn = "^0.11"
methodtools = "^0.4.5"
sqlalchemy = {version = ">=1.4", extras = ["mypy"]}
alembic = "^1.6.5"
python-dotenv = "^0.19.0"
python-multipart = "^0.0.5"
h5py = ">=2.10,<3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.18.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pylint = "*"
pylint-fail-under = "*"
black = { version = "*", allow-prereleases = true }
mypy = "*"
mypy-protobuf = "^2.9"
hypothesis = {extras = ["numpy"], version = "*"}
safety = "^1.10.3"
types-protobuf = "^3.17.4"
types-requests = "^2.25.6"
typing-extensions = "^3.10.0"
pytest-profiling = "^1.7.0"
types-requests = "^2.25.6"
pytest-profiling = "^1.7.0"

[tool.poetry.scripts]
scope-console = 'scopec:cli'

[tool.pylint.'MESSAGES CONTROL']
max-line-length = '120'
disable = 'W1203'

[tool.black]
line-length = 120
target-version = ['py38']
exclude = 'scope_grpc_pb2*'

[build-system]
requires = [
        "poetry>=0.12",
        "setuptools>=45.2.0"
        ]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = 3.8
plugins = [
        "sqlalchemy.ext.mypy.plugin"
]